@@ -1,3 +1,9 @@
+2009-01-11  Bruce van der Kooij  <brucevdkooij@gmail.com>
+
+	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
+	* nautilussvn/lib/vcs/svn.py:
+	Committing some local modifications, not done yet.
+
 2009-01-06  Bruce van der Kooij  <brucevdkooij@gmail.com>
 
 	* nautilussvn/lib/vcs/svn.py:
